// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 100px;
  height: 40px;
  padding: 0 20px;
  border-radius: 9999px;
  color: white;
  font-size: 0.75rem;
  font-weight: 700;
  text-align: center;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button renders correctly when loading 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border: 2px solid rgba(0,0,0,0.2);
  border-bottom-color: rgba(255,255,255,0.8);
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: iVXCSc 500ms infinite linear;
  animation: iVXCSc 500ms infinite linear;
  width: 25px;
  height: 25px;
  border-radius: 50%;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
